--- a/src/comercial/templates/customers/customer_detail.html
+++ b/src/comercial/templates/customers/customer_detail.html
@@ -247,7 +247,7 @@ Cliente: {{ customer.user.get_full_name }}
                                     <div class="text-muted">
                                         <i class="fas fa-shopping-cart fa-3x mb-3"></i>
                                         <p>Nenhum pedido encontrado</p>
-                                        <a href="{% url 'order_create' %}?customer={{ customer.pk }}" class="btn btn-primary">
+                                        <a href="{% url 'comercial:order_create' %}?customer={{ customer.pk }}" class="btn btn-primary">
                                             <i class="fas fa-plus me-2"></i>Criar Primeiro Pedido
                                         </a>
                                     </div>
