--- a/src/comercial/templates/base.html
+++ b/src/comercial/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Sistema de Entregas{% endblock %}</title>
+    <title>{% block title %}{% endblock %} New Back</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -147,7 +147,7 @@
                     <div class="text-center mb-4">
                         <h4 class="text-white">
                             <i class="fas fa-truck"></i>
-                            DeliverySystem
+                            New Back
                         </h4>
                     </div>
                     
