--- a/src/comercial/templates/customers/customer_list.html
+++ b/src/comercial/templates/customers/customer_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block page_title %}Clientes{% endblock %}
+{% block title %}Clientes |{% endblock %}
 
 {% block page_actions %}
 <a href="{% url 'comercial:customer_create' %}" class="btn btn-primary">
