--- a/src/comercial/templates/orders/order_list.html
+++ b/src/comercial/templates/orders/order_list.html
@@ -42,26 +42,23 @@
                         </td>
                         <td>{{ order.order_date|date:"d/m/Y H:i" }}</td>
                         <td>
-                            {% with delivery=order.delivery_set.first %}
-                                {% if delivery %}
-                                    {% if delivery.delivered %}
+                            
+                                {% if order.status == 'confirmed' %}
                                         <span class="badge bg-success">
                                             <i class="fas fa-check me-1"></i>
-                                            Entregue
+                                            Confirmado
                                         </span>
-                                    {% else %}
-                                        <span class="badge bg-warning">
-                                            <i class="fas fa-clock me-1"></i>
-                                            Em Entrega
-                                        </span>
-                                    {% endif %}
-                                {% else %}
-                                    <span class="badge bg-secondary">
-                                        <i class="fas fa-hourglass-start me-1"></i>
-                                        Processando
+                                {% elif order.status == 'pending' %}
+                                    <span class="badge bg-warning">
+                                        <i class="fas fa-clock me-1"></i>
+                                        Pendente
+                                    </span>
+                                {% elif order.status == 'cancelled' %}
+                                    <span class="badge bg-danger">
+                                        <i class="fas fa-clock me-1"></i>
+                                        Cancelado
                                     </span>
                                 {% endif %}
-                            {% endwith %}
                         </td>
                         <td>
                             <div class="btn-group" role="group">
