--- a/src/comercial/templates/customers/customer_list.html
+++ b/src/comercial/templates/customers/customer_list.html
@@ -11,9 +11,9 @@
 
 {% block content %}
 <!-- Stats Cards -->
-<div class="row mb-4">
-    <div class="col-md-3">
-        <div class="card stats-card text-white">
+<div class="row mb-4 d-flex align-items-stretch">
+    <div class="col-md-3 d-flex">
+        <div class="card stats-card text-white h-100 w-100">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
                     <div>
@@ -27,8 +27,8 @@
             </div>
         </div>
     </div>
-    <div class="col-md-3">
-        <div class="card bg-success text-white">
+    <div class="col-md-3 d-flex">
+        <div class="card bg-success text-white h-100 w-100">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
                     <div>
@@ -43,8 +43,8 @@
             </div>
         </div>
     </div>
-    <div class="col-md-3">
-        <div class="card bg-info text-white">
+    <div class="col-md-3 d-flex">
+        <div class="card bg-info text-white h-100 w-100">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
                     <div>
@@ -58,8 +58,8 @@
             </div>
         </div>
     </div>
-    <div class="col-md-3">
-        <div class="card bg-warning text-white">
+    <div class="col-md-3 d-flex">
+        <div class="card bg-warning text-white h-100 w-100">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
                     <div>
@@ -74,6 +74,7 @@
         </div>
     </div>
 </div>
+
 
 <!-- Search and Filters -->
 <div class="card mb-4">
