--- a/src/comercial/templates/base.html
+++ b/src/comercial/templates/base.html
@@ -176,24 +176,24 @@
                                 Pedidos
                             </a>
                         </li>
-                        <li class="nav-item">
+                        {% comment %} <li class="nav-item">
                             <a class="nav-link {% if 'comercial:delivery' in request.resolver_match.url_name %}active{% endif %}" href="{% url 'comercial:delivery_list' %}">
                                 <i class="fas fa-shipping-fast me-2"></i>
                                 Entregas
                             </a>
-                        </li>
+                        </li> {% endcomment %}
                         <li class="nav-item">
                             <a class="nav-link {% if 'comercial:employee' in request.resolver_match.url_name %}active{% endif %}" href="{% url 'comercial:employee_list' %}">
                                 <i class="fas fa-user-tie me-2"></i>
                                 Funcionários
                             </a>
                         </li>
-                        <li class="nav-item">
+                        {% comment %} <li class="nav-item">
                             <a class="nav-link {% if 'comercial:vehicle' in request.resolver_match.url_name %}active{% endif %}" href="{% url 'comercial:vehicle_list' %}">
                                 <i class="fas fa-car me-2"></i>
                                 Veículos
                             </a>
-                        </li>
+                        </li> {% endcomment %}
                     </ul>
                     
                     <hr class="text-white">
