refactor: changed 'departament' field in employee model to 'department'

--- a/src/comercial/templates/employees/employee_detail.html
+++ b/src/comercial/templates/employees/employee_detail.html
@@ -43,7 +43,7 @@
                     Departamento
                 </h6>
                 <div class="mb-3">
-                    <strong>Nome do departamento:</strong> {{ employee.departament.name }}
+                    <strong>Nome do departamento:</strong> {{ employee.department.name }}
                 </div>
 
                 <!-- Ações -->
