--- a/src/comercial/templates/employees/employee_list.html
+++ b/src/comercial/templates/employees/employee_list.html
@@ -127,7 +127,7 @@
                     </div>
                     <div class="flex-grow-1">
                         <h5 class="card-title mb-1">{{ employee.user.get_full_name }}</h5>
-                        <p class="text-muted mb-0">{{ employee.departament.name }}</p>
+                        <p class="text-muted mb-0">{{ employee.department.name }}</p>
                         <small class="text-muted">{{ employee.user.email }}</small>
                     </div>
                     <div class="dropdown">
