build(stdout):add stdout in container

--- a/src/comercial/templates/employees/employee_list.html
+++ b/src/comercial/templates/employees/employee_list.html
@@ -12,7 +12,7 @@
 {% block content %}
 <!-- Stats Cards -->
 <div class="row mb-4">
-    <div class="col-md-3">
+    <div class="col-md-6">
         <div class="card stats-card text-white">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
@@ -42,7 +42,7 @@
             </div>
         </div>
     </div> {% endcomment %}
-    <div class="col-md-3">
+    {% comment %} <div class="col-md-3">
         <div class="card bg-info text-white">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
@@ -56,8 +56,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="col-md-3">
+    </div> {% endcomment %}
+    <div class="col-md-6">
         <div class="card bg-warning text-white">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
