--- a/src/comercial/templates/customers/customer_list.html
+++ b/src/comercial/templates/customers/customer_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}Clientes |{% endblock %}
-
+{% block page_title %}Clientes{% endblock %}
 {% block page_actions %}
 <a href="{% url 'comercial:customer_create' %}" class="btn btn-primary">
     <i class="fas fa-plus me-2"></i>
